--- a/css/main.css
+++ b/css/main.css
@@ -187,3 +187,28 @@ img {
   mask-border: var(--_m);
   clip-path: polygon(-41% 0, 50% 91%, 141% 0);
 }
+.buttons {
+  margin-top: 20px;
+  text-align: center;
+}
+
+button {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  padding: 10px 20px;
+  margin: 10px;
+  border: none;
+  border-radius: 25px;
+  background-color: #ff5e78;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #ff2e58;
+}
+
+#noButton {
+  position: relative;
+}
